deploy: 7cc19ee5f624f713005b8b262bc292c9d8a262c2

--- a/circuit.js.html
+++ b/circuit.js.html
@@ -199,7 +199,7 @@ function deleteCurrentCircuit(scopeId = globalScope.id) {
         return;
     }
 
-    const confirmation = confirm(`Are you sure want to delete: ${scope.name}\nThis cannot be undone.`);
+    const confirmation = confirm(`Are you sure want to close: ${scope.name}\nThis cannot be undone.`);
     if (confirmation) {
         if (scope.verilogMetadata.isVerilogCircuit) {
             scope.initialize();
@@ -209,8 +209,8 @@ function deleteCurrentCircuit(scopeId = globalScope.id) {
         $(`#${scope.id}`).remove();
         delete scopeList[scope.id];
         switchCircuit(Object.keys(scopeList)[0]);
-        showMessage('Circuit was successfully deleted');
-    } else { showMessage('Circuit was not deleted'); }
+        showMessage('Circuit was successfully closed');
+    } else { showMessage('Circuit was not closed'); }
 }
 
 /**
