--- a/utils.js.html
+++ b/utils.js.html
@@ -319,11 +319,13 @@ export var convertors = {
     dec2bin: x => "0b" + x.toString(2),
     dec2hex: x => "0x" + x.toString(16),
     dec2octal: x => "0" + x.toString(8),
+    dec2bcd: x => parseInt(x.toString(10), 16).toString(2), 
 }
 
 function setBaseValues(x) {
     if (isNaN(x)) return;
     $("#binaryInput").val(convertors.dec2bin(x));
+    $("#bcdInput").val(convertors.dec2bcd(x));
     $("#octalInput").val(convertors.dec2octal(x));
     $("#hexInput").val(convertors.dec2hex(x));
     $("#decimalInput").val(x);
@@ -354,6 +356,24 @@ export function setupBitConvertor() {
         else 
             x = parseInt(inp, 2);
         setBaseValues(x);
+    })
+    $("#bcdInput").on('keyup', function () {
+        var input = $("#bcdInput").val();
+        var num = 0;
+        while (input.length % 4 !== 0){
+            input = "0" + input;
+        }
+        if(input !== 0){
+            var i = 0;
+            while (i &lt; input.length / 4){
+                if(parseInt(input.slice((4 * i), 4 * (i + 1)), 2) &lt; 10)
+                    num = num * 10 + parseInt(input.slice((4 * i), 4 * (i + 1)), 2);
+                else
+                    return setBaseValues(NaN);
+                i++;
+            }
+        }
+        return setBaseValues(x);
     })
 
     $("#hexInput").on('keyup', function () {
