--- a/sequential_Keyboard.js.html
+++ b/sequential_Keyboard.js.html
@@ -88,7 +88,7 @@
             <pre class="prettyprint source linenums"><code>import CircuitElement from '../circuitElement';
 import Node, { findNode } from '../node';
 import simulationArea from '../simulationArea';
-import { correctWidth, lineTo, moveTo, fillText3, fontSize } from '../canvasApi';
+import { correctWidth, lineTo, moveTo, fillText3 } from '../canvasApi';
 /**
  * @class
  * Keyboard
